<resources>
    <string name="app_name">PillPal</string>
    <string name="open_navdrawer">Navigationsleiste Öffnen</string>
    <string name="close_navdrawer">Navigationsleiste schliessen</string>
    <string name="nav_logout">Abmelden</string>
    <string name="nav_help">Hilfe</string>
    <string name="nav_home">Scannen</string>
    <string name="nav_inventur">Inventur</string>
    <string name="nav_scan">Rezepte</string>
    <string name="header_desc">Willkommen!</string>
    <string name="pic_error">Fehler beim Bild machen!</string>
    <string name="text_notfound">Text nicht erkannt!</string>
    <string name="pic_nottaken">Bild nicht gemacht!</string>
    <string name="access_denied">Zugriff nicht gewährt!</string>
    <string name="family_name">Familienname</string>
    <string name="svn">Sozialversicherung</string>
    <string name="take_picture">Bild machen</string>
    <string name="start_record">Aufnahme Starten</string>
    <string name="stop_record">Aufnahme Stoppen</string>
    <string name="save_record">Aufnahme Speichern</string>
    <string name="send_record">Aufnahme Senden</string>
    <string name="edit_name">Name</string>
    <string name="edit_expiry">Ablaufdatum</string>
    <string name="delete">Löschen</string>
    <string name="login">Anmelden</string>
    <string name="patheader">Patienten Informationen:</string>
    <string name="pracheader">Arzt Informationen:</string>
    <string name="medheader">Medikament:</string>
    <string name="jsonparsingerror">Fehlerhafte Eingabe. Bitte folgen Sie genau den Anweisungen!</string>
    <string name="choosemail">Wählen Sie Ihren Mail Anbieter:</string>
    <string name="whisp_desc"> <b>Bitte folgen Sie dieser Anleitung: </b>1. eMedID 2. eMedID Group 3. ASP CODE 4. Medican \n5. Requester 6. Subject 7. Patient instructions 8. Frequency  9. When</string>
    <string name="help_description"><b>Anleitung für die Bedienung von PillPal</b>\n(<b>powered by AI</b>)\n<b>Scannen</b>\nIn dieser Ansicht können Sie durch den "Scannen" Knopf die Kamera öffnen und Ihr Rezept fotografieren. Sind Sie zufrieden mit dem Bild drücken Sie auf "OK", sonst auf "Wiederholen" und nehmen ein neues Bild auf. Die App scannt dann Ihr Rezept und leitet die Daten an unseren Server weiter, wo sie verarbeitet werden. Unter der Ansicht "Rezepte" können Sie ihr eingescanntes Rezept dann begutachten.\n<b>Rezepte</b>\nIn dieser Ansicht können Sie die eingescannten Rezepte sehen.\n<b>Inventur</b>\nIn dieser Ansicht können Sie Ihre Medikamente verwalten. Dafür drücken Sie auf den "Bild machen" Knopf. Dadurch öffnet sich Ihre Kamera und Sie können ihr Medikament fotografieren. Sind Sie zufrieden mit dem Bild drücken Sie auf "OK", sonst auf "Wiederholen" und nehmen ein neues Bild auf. Ihr Bild wird daraufhin auf der Seite angezeigt und Sie können Namen und Ablaufdatum hinzufügen, um eine gute Übersicht über Ihren heimischen Medikamenten-Bestand zu erhalten.\n<b>Whisper</b>\nIn dieser Ansicht können Sie ihr Rezept einsprechen. Hierfür drücken Sie zuerst auf den "Aufnahme Starten" Knopf und beginnen Ihr Rezept nach der angezeigten Anleitung einzusprechen. Sind Sie fertig mit dem Einsprechen drücken Sie den "Aufnahme Stoppen" Knopf. Sind Sie zufrieden mit Ihrer Aufnahme, drücken Sie den "Aufnahme Speichern" Knopf. Sonst drücken Sie auf "Reset". Dann wird Ihre Aufnahme an den Server gesendet. Das Ergebnis wird einerseits in der Ansicht gezeigt und andererseits unter "Rezepte" gespeichert.\n<b>Abmelden</b>\nHier können Sie sich abmelden.\n\n<b>Für weitere Fragen können Sie uns gerne per Mail kontaktieren!</b></string>
</resources>