<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_marginBottom="8dp"
    android:elevation="4dp"
    >


    <TextView
        android:id="@+id/patientHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patheader"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/patientView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"/>

    <TextView
        android:id="@+id/practicionerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pracheader"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/practicionerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"/>

    <TextView
        android:id="@+id/medicationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medheader"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/medicationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"/>
</LinearLayout>