<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/loginbackground"/>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="34dp"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"/>
        <EditText
            android:id="@+id/editPatientId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/svn"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_background"
            android:textColor="@color/white"
            android:text="Login"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>
</RelativeLayout>